syntax = "proto3";

package io.openfuture.chain.message;

message TimeSynchronizationMessage {
  int64 request_time = 1;
  int64 response_time = 2;
}
